[metadata]
name = api-client
summary = Fortinet API Client Libraries
description_file =
	README.rst
author = Fortinet Inc.
home_page = http://www.fortinet.com
classifier = 
	Environment :: FortiGate
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 2.6

[files]
packages = 
	api_client

[global]
setup_hooks =
	pbr.hooks.setup_hook

[bdist_wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0

